美化计时特效，初始化统计柱状图

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
     "moment": "^2.29.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
